HSQL/src/main/java/org/ict/hsql/parse/HSQLParser.java
// $ANTLR 3.5 HSQLParser.g 2014-02-24 14:40:00

package org.ict.hsql.parse;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class HSQLParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "CHAR", "CHAR_ESC", "COMMA", 
		"CREATE", "DBL_QUOTE_CHAR", "DECIMAL", "DELETE", "DIGIT", "DOT", "DOUBLE", 
		"DOUBLE_LITERAL", "DROP", "EOL", "EQ", "FROM", "GT", "GTE", "INDEX", "INSERT", 
		"INT", "INTEGER_LITERAL", "INTO", "LETTER", "LONG", "LONG_LITERAL", "LT", 
		"LTE", "L_PAREN", "MINUS", "NEQ", "ON", "OR", "POSINTEGER", "PRIMARYKEY", 
		"R_PAREN", "SELECT", "SET", "STR", "STRING", "STRING_LITERAL", "STR_LITERALS", 
		"SUM", "TABLE", "UPDATE", "VALUES", "WHERE", "WS", "LIST", "SELECT_LIST"
	};
	public static final int EOF=-1;
	public static final int AND=4;
	public static final int CHAR=5;
	public static final int CHAR_ESC=6;
	public static final int COMMA=7;
	public static final int CREATE=8;
	public static final int DBL_QUOTE_CHAR=9;
	public static final int DECIMAL=10;
	public static final int DELETE=11;
	public static final int DIGIT=12;
	public static final int DOT=13;
	public static final int DOUBLE=14;
	public static final int DOUBLE_LITERAL=15;
	public static final int DROP=16;
	public static final int EOL=17;
	public static final int EQ=18;
	public static final int FROM=19;
	public static final int GT=20;
	public static final int GTE=21;
	public static final int INDEX=22;
	public static final int INSERT=23;
	public static final int INT=24;
	public static final int INTEGER_LITERAL=25;
	public static final int INTO=26;
	public static final int LETTER=27;
	public static final int LONG=28;
	public static final int LONG_LITERAL=29;
	public static final int LT=30;
	public static final int LTE=31;
	public static final int L_PAREN=32;
	public static final int MINUS=33;
	public static final int NEQ=34;
	public static final int ON=35;
	public static final int OR=36;
	public static final int POSINTEGER=37;
	public static final int PRIMARYKEY=38;
	public static final int R_PAREN=39;
	public static final int SELECT=40;
	public static final int SET=41;
	public static final int STR=42;
	public static final int STRING=43;
	public static final int STRING_LITERAL=44;
	public static final int STR_LITERALS=45;
	public static final int SUM=46;
	public static final int TABLE=47;
	public static final int UPDATE=48;
	public static final int VALUES=49;
	public static final int WHERE=50;
	public static final int WS=51;
	public static final int LIST=52;
	public static final int SELECT_LIST=53;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public HSQLParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public HSQLParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return HSQLParser.tokenNames; }
	@Override public String getGrammarFileName() { return "HSQLParser.g"; }


	public static class sql_stat_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "sql_stat"
	// HSQLParser.g:13:1: sql_stat : ( create_stat | drop_stat | insert_stat | select_stat | delete_stat | update_stat | create_index );
	public final HSQLParser.sql_stat_return sql_stat() throws RecognitionException {
		HSQLParser.sql_stat_return retval = new HSQLParser.sql_stat_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope create_stat1 =null;
		ParserRuleReturnScope drop_stat2 =null;
		ParserRuleReturnScope insert_stat3 =null;
		ParserRuleReturnScope select_stat4 =null;
		ParserRuleReturnScope delete_stat5 =null;
		ParserRuleReturnScope update_stat6 =null;
		ParserRuleReturnScope create_index7 =null;


		try {
			// HSQLParser.g:13:9: ( create_stat | drop_stat | insert_stat | select_stat | delete_stat | update_stat | create_index )
			int alt1=7;
			switch ( input.LA(1) ) {
			case CREATE:
				{
				int LA1_1 = input.LA(2);
				if ( (LA1_1==TABLE) ) {
					alt1=1;
				}
				else if ( (LA1_1==INDEX) ) {
					alt1=7;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 1, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case DROP:
				{
				alt1=2;
				}
				break;
			case INSERT:
				{
				alt1=3;
				}
				break;
			case SELECT:
				{
				alt1=4;
				}
				break;
			case DELETE:
				{
				alt1=5;
				}
				break;
			case UPDATE:
				{
				alt1=6;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}
			switch (alt1) {
				case 1 :
					// HSQLParser.g:14:6: create_stat
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_create_stat_in_sql_stat59);
					create_stat1=create_stat();
					state._fsp--;

					adaptor.addChild(root_0, create_stat1.getTree());

					}
					break;
				case 2 :
					// HSQLParser.g:15:6: drop_stat
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_drop_stat_in_sql_stat66);
					drop_stat2=drop_stat();
					state._fsp--;

					adaptor.addChild(root_0, drop_stat2.getTree());

					}
					break;
				case 3 :
					// HSQLParser.g:16:6: insert_stat
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_insert_stat_in_sql_stat73);
					insert_stat3=insert_stat();
					state._fsp--;

					adaptor.addChild(root_0, insert_stat3.getTree());

					}
					break;
				case 4 :
					// HSQLParser.g:17:6: select_stat
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_select_stat_in_sql_stat80);
					select_stat4=select_stat();
					state._fsp--;

					adaptor.addChild(root_0, select_stat4.getTree());

					}
					break;
				case 5 :
					// HSQLParser.g:18:6: delete_stat
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_delete_stat_in_sql_stat87);
					delete_stat5=delete_stat();
					state._fsp--;

					adaptor.addChild(root_0, delete_stat5.getTree());

					}
					break;
				case 6 :
					// HSQLParser.g:19:6: update_stat
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_update_stat_in_sql_stat94);
					update_stat6=update_stat();
					state._fsp--;

					adaptor.addChild(root_0, update_stat6.getTree());

					}
					break;
				case 7 :
					// HSQLParser.g:20:6: create_index
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_create_index_in_sql_stat101);
					create_index7=create_index();
					state._fsp--;

					adaptor.addChild(root_0, create_index7.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "sql_stat"


	public static class create_index_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "create_index"
	// HSQLParser.g:22:1: create_index : CREATE INDEX index_name ON table_name -> ^( INDEX index_name table_name ) ;
	public final HSQLParser.create_index_return create_index() throws RecognitionException {
		HSQLParser.create_index_return retval = new HSQLParser.create_index_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token CREATE8=null;
		Token INDEX9=null;
		Token ON11=null;
		ParserRuleReturnScope index_name10 =null;
		ParserRuleReturnScope table_name12 =null;

		Object CREATE8_tree=null;
		Object INDEX9_tree=null;
		Object ON11_tree=null;
		RewriteRuleTokenStream stream_INDEX=new RewriteRuleTokenStream(adaptor,"token INDEX");
		RewriteRuleTokenStream stream_ON=new RewriteRuleTokenStream(adaptor,"token ON");
		RewriteRuleTokenStream stream_CREATE=new RewriteRuleTokenStream(adaptor,"token CREATE");
		RewriteRuleSubtreeStream stream_index_name=new RewriteRuleSubtreeStream(adaptor,"rule index_name");
		RewriteRuleSubtreeStream stream_table_name=new RewriteRuleSubtreeStream(adaptor,"rule table_name");

		try {
			// HSQLParser.g:23:5: ( CREATE INDEX index_name ON table_name -> ^( INDEX index_name table_name ) )
			// HSQLParser.g:24:5: CREATE INDEX index_name ON table_name
			{
			CREATE8=(Token)match(input,CREATE,FOLLOW_CREATE_in_create_index121);  
			stream_CREATE.add(CREATE8);

			INDEX9=(Token)match(input,INDEX,FOLLOW_INDEX_in_create_index123);  
			stream_INDEX.add(INDEX9);

			pushFollow(FOLLOW_index_name_in_create_index125);
			index_name10=index_name();
			state._fsp--;

			stream_index_name.add(index_name10.getTree());
			ON11=(Token)match(input,ON,FOLLOW_ON_in_create_index127);  
			stream_ON.add(ON11);

			pushFollow(FOLLOW_table_name_in_create_index129);
			table_name12=table_name();
			state._fsp--;

			stream_table_name.add(table_name12.getTree());
			// AST REWRITE
			// elements: table_name, index_name, INDEX
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 25:5: -> ^( INDEX index_name table_name )
			{
				// HSQLParser.g:25:7: ^( INDEX index_name table_name )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot(stream_INDEX.nextNode(), root_1);
				adaptor.addChild(root_1, stream_index_name.nextTree());
				adaptor.addChild(root_1, stream_table_name.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "create_index"


	public static class index_name_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "index_name"
	// HSQLParser.g:27:1: index_name : STR ;
	public final HSQLParser.index_name_return index_name() throws RecognitionException {
		HSQLParser.index_name_return retval = new HSQLParser.index_name_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token STR13=null;

		Object STR13_tree=null;

		try {
			// HSQLParser.g:28:5: ( STR )
			// HSQLParser.g:28:6: STR
			{
			root_0 = (Object)adaptor.nil();


			STR13=(Token)match(input,STR,FOLLOW_STR_in_index_name157); 
			STR13_tree = (Object)adaptor.create(STR13);
			adaptor.addChild(root_0, STR13_tree);

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "index_name"


	public static class update_stat_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "update_stat"
	// HSQLParser.g:30:1: update_stat : UPDATE table_name update_list ( where_clause )? -> ^( UPDATE table_name update_list ( where_clause )? ) ;
	public final HSQLParser.update_stat_return update_stat() throws RecognitionException {
		HSQLParser.update_stat_return retval = new HSQLParser.update_stat_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token UPDATE14=null;
		ParserRuleReturnScope table_name15 =null;
		ParserRuleReturnScope update_list16 =null;
		ParserRuleReturnScope where_clause17 =null;

		Object UPDATE14_tree=null;
		RewriteRuleTokenStream stream_UPDATE=new RewriteRuleTokenStream(adaptor,"token UPDATE");
		RewriteRuleSubtreeStream stream_update_list=new RewriteRuleSubtreeStream(adaptor,"rule update_list");
		RewriteRuleSubtreeStream stream_where_clause=new RewriteRuleSubtreeStream(adaptor,"rule where_clause");
		RewriteRuleSubtreeStream stream_table_name=new RewriteRuleSubtreeStream(adaptor,"rule table_name");

		try {
			// HSQLParser.g:31:5: ( UPDATE table_name update_list ( where_clause )? -> ^( UPDATE table_name update_list ( where_clause )? ) )
			// HSQLParser.g:32:5: UPDATE table_name update_list ( where_clause )?
			{
			UPDATE14=(Token)match(input,UPDATE,FOLLOW_UPDATE_in_update_stat177);  
			stream_UPDATE.add(UPDATE14);

			pushFollow(FOLLOW_table_name_in_update_stat179);
			table_name15=table_name();
			state._fsp--;

			stream_table_name.add(table_name15.getTree());
			pushFollow(FOLLOW_update_list_in_update_stat185);
			update_list16=update_list();
			state._fsp--;

			stream_update_list.add(update_list16.getTree());
			// HSQLParser.g:34:5: ( where_clause )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==WHERE) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// HSQLParser.g:34:5: where_clause
					{
					pushFollow(FOLLOW_where_clause_in_update_stat191);
					where_clause17=where_clause();
					state._fsp--;

					stream_where_clause.add(where_clause17.getTree());
					}
					break;

			}

			// AST REWRITE
			// elements: update_list, where_clause, table_name, UPDATE
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 35:5: -> ^( UPDATE table_name update_list ( where_clause )? )
			{
				// HSQLParser.g:35:8: ^( UPDATE table_name update_list ( where_clause )? )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot(stream_UPDATE.nextNode(), root_1);
				adaptor.addChild(root_1, stream_table_name.nextTree());
				adaptor.addChild(root_1, stream_update_list.nextTree());
				// HSQLParser.g:35:40: ( where_clause )?
				if ( stream_where_clause.hasNext() ) {
					adaptor.addChild(root_1, stream_where_clause.nextTree());
				}
				stream_where_clause.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "update_stat"


	public static class update_list_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "update_list"
	// HSQLParser.g:37:1: update_list : SET ^ update_element ( COMMA ! update_element )* ;
	public final HSQLParser.update_list_return update_list() throws RecognitionException {
		HSQLParser.update_list_return retval = new HSQLParser.update_list_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token SET18=null;
		Token COMMA20=null;
		ParserRuleReturnScope update_element19 =null;
		ParserRuleReturnScope update_element21 =null;

		Object SET18_tree=null;
		Object COMMA20_tree=null;

		try {
			// HSQLParser.g:37:12: ( SET ^ update_element ( COMMA ! update_element )* )
			// HSQLParser.g:38:5: SET ^ update_element ( COMMA ! update_element )*
			{
			root_0 = (Object)adaptor.nil();


			SET18=(Token)match(input,SET,FOLLOW_SET_in_update_list224); 
			SET18_tree = (Object)adaptor.create(SET18);
			root_0 = (Object)adaptor.becomeRoot(SET18_tree, root_0);

			pushFollow(FOLLOW_update_element_in_update_list227);
			update_element19=update_element();
			state._fsp--;

			adaptor.addChild(root_0, update_element19.getTree());

			// HSQLParser.g:38:25: ( COMMA ! update_element )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==COMMA) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// HSQLParser.g:38:26: COMMA ! update_element
					{
					COMMA20=(Token)match(input,COMMA,FOLLOW_COMMA_in_update_list230); 
					pushFollow(FOLLOW_update_element_in_update_list233);
					update_element21=update_element();
					state._fsp--;

					adaptor.addChild(root_0, update_element21.getTree());

					}
					break;

				default :
					break loop3;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "update_list"


	public static class update_element_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "update_element"
	// HSQLParser.g:40:1: update_element : column EQ expression -> ^( EQ column expression ) ;
	public final HSQLParser.update_element_return update_element() throws RecognitionException {
		HSQLParser.update_element_return retval = new HSQLParser.update_element_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token EQ23=null;
		ParserRuleReturnScope column22 =null;
		ParserRuleReturnScope expression24 =null;

		Object EQ23_tree=null;
		RewriteRuleTokenStream stream_EQ=new RewriteRuleTokenStream(adaptor,"token EQ");
		RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");
		RewriteRuleSubtreeStream stream_column=new RewriteRuleSubtreeStream(adaptor,"rule column");

		try {
			// HSQLParser.g:40:15: ( column EQ expression -> ^( EQ column expression ) )
			// HSQLParser.g:41:5: column EQ expression
			{
			pushFollow(FOLLOW_column_in_update_element250);
			column22=column();
			state._fsp--;

			stream_column.add(column22.getTree());
			EQ23=(Token)match(input,EQ,FOLLOW_EQ_in_update_element252);  
			stream_EQ.add(EQ23);

			pushFollow(FOLLOW_expression_in_update_element254);
			expression24=expression();
			state._fsp--;

			stream_expression.add(expression24.getTree());
			// AST REWRITE
			// elements: column, EQ, expression
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 42:5: -> ^( EQ column expression )
			{
				// HSQLParser.g:42:8: ^( EQ column expression )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot(stream_EQ.nextNode(), root_1);
				adaptor.addChild(root_1, stream_column.nextTree());
				adaptor.addChild(root_1, stream_expression.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "update_element"


	public static class expression_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "expression"
	// HSQLParser.g:44:1: expression : literals ;
	public final HSQLParser.expression_return expression() throws RecognitionException {
		HSQLParser.expression_return retval = new HSQLParser.expression_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope literals25 =null;


		try {
			// HSQLParser.g:45:5: ( literals )
			// HSQLParser.g:45:6: literals
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_literals_in_expression283);
			literals25=literals();
			state._fsp--;

			adaptor.addChild(root_0, literals25.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "expression"


	public static class delete_stat_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "delete_stat"
	// HSQLParser.g:47:1: delete_stat : DELETE FROM table_name ( where_clause )? -> ^( DELETE table_name ( where_clause )? ) ;
	public final HSQLParser.delete_stat_return delete_stat() throws RecognitionException {
		HSQLParser.delete_stat_return retval = new HSQLParser.delete_stat_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token DELETE26=null;
		Token FROM27=null;
		ParserRuleReturnScope table_name28 =null;
		ParserRuleReturnScope where_clause29 =null;

		Object DELETE26_tree=null;
		Object FROM27_tree=null;
		RewriteRuleTokenStream stream_DELETE=new RewriteRuleTokenStream(adaptor,"token DELETE");
		RewriteRuleTokenStream stream_FROM=new RewriteRuleTokenStream(adaptor,"token FROM");
		RewriteRuleSubtreeStream stream_where_clause=new RewriteRuleSubtreeStream(adaptor,"rule where_clause");
		RewriteRuleSubtreeStream stream_table_name=new RewriteRuleSubtreeStream(adaptor,"rule table_name");

		try {
			// HSQLParser.g:48:5: ( DELETE FROM table_name ( where_clause )? -> ^( DELETE table_name ( where_clause )? ) )
			// HSQLParser.g:49:5: DELETE FROM table_name ( where_clause )?
			{
			DELETE26=(Token)match(input,DELETE,FOLLOW_DELETE_in_delete_stat303);  
			stream_DELETE.add(DELETE26);

			FROM27=(Token)match(input,FROM,FOLLOW_FROM_in_delete_stat306);  
			stream_FROM.add(FROM27);

			pushFollow(FOLLOW_table_name_in_delete_stat309);
			table_name28=table_name();
			state._fsp--;

			stream_table_name.add(table_name28.getTree());
			// HSQLParser.g:49:30: ( where_clause )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==WHERE) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// HSQLParser.g:49:30: where_clause
					{
					pushFollow(FOLLOW_where_clause_in_delete_stat311);
					where_clause29=where_clause();
					state._fsp--;

					stream_where_clause.add(where_clause29.getTree());
					}
					break;

			}

			// AST REWRITE
			// elements: where_clause, table_name, DELETE
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 50:5: -> ^( DELETE table_name ( where_clause )? )
			{
				// HSQLParser.g:50:8: ^( DELETE table_name ( where_clause )? )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot(stream_DELETE.nextNode(), root_1);
				adaptor.addChild(root_1, stream_table_name.nextTree());
				// HSQLParser.g:50:28: ( where_clause )?
				if ( stream_where_clause.hasNext() ) {
					adaptor.addChild(root_1, stream_where_clause.nextTree());
				}
				stream_where_clause.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "delete_stat"


	public static class where_clause_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "where_clause"
	// HSQLParser.g:52:1: where_clause : WHERE andCondition -> ^( WHERE andCondition ) ;
	public final HSQLParser.where_clause_return where_clause() throws RecognitionException {
		HSQLParser.where_clause_return retval = new HSQLParser.where_clause_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token WHERE30=null;
		ParserRuleReturnScope andCondition31 =null;

		Object WHERE30_tree=null;
		RewriteRuleTokenStream stream_WHERE=new RewriteRuleTokenStream(adaptor,"token WHERE");
		RewriteRuleSubtreeStream stream_andCondition=new RewriteRuleSubtreeStream(adaptor,"rule andCondition");

		try {
			// HSQLParser.g:53:5: ( WHERE andCondition -> ^( WHERE andCondition ) )
			// HSQLParser.g:54:5: WHERE andCondition
			{
			WHERE30=(Token)match(input,WHERE,FOLLOW_WHERE_in_where_clause347);  
			stream_WHERE.add(WHERE30);

			pushFollow(FOLLOW_andCondition_in_where_clause349);
			andCondition31=andCondition();
			state._fsp--;

			stream_andCondition.add(andCondition31.getTree());
			// AST REWRITE
			// elements: andCondition, WHERE
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 55:5: -> ^( WHERE andCondition )
			{
				// HSQLParser.g:55:8: ^( WHERE andCondition )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot(stream_WHERE.nextNode(), root_1);
				adaptor.addChild(root_1, stream_andCondition.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "where_clause"


	public static class andCondition_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "andCondition"
	// HSQLParser.g:57:1: andCondition : orCondition ( AND ^ orCondition )* ;
	public final HSQLParser.andCondition_return andCondition() throws RecognitionException {
		HSQLParser.andCondition_return retval = new HSQLParser.andCondition_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token AND33=null;
		ParserRuleReturnScope orCondition32 =null;
		ParserRuleReturnScope orCondition34 =null;

		Object AND33_tree=null;

		try {
			// HSQLParser.g:58:5: ( orCondition ( AND ^ orCondition )* )
			// HSQLParser.g:59:5: orCondition ( AND ^ orCondition )*
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_orCondition_in_andCondition382);
			orCondition32=orCondition();
			state._fsp--;

			adaptor.addChild(root_0, orCondition32.getTree());

			// HSQLParser.g:59:17: ( AND ^ orCondition )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==AND) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
